--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "firebase": "^6.6.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux-firebase": "^2.4.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux-firestore": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
